# oatbar

./: .gitignore  404.html  AUTHORS  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  README.md  README2.md  RELEASE_NOTES.md  build.rs  index.html  installation.html  links.html  print.html  searcher-c2a407aa.js  searchindex-04455b86.js  searchindex-60588115.js  searchindex-edef3657.js  searchindex-f5f2b96a.js  searchindex.js  searchindex.json  toc-5ccd24b1.js  toc-6b7ee4b5.js  toc-81a2ba57.js  toc.html  toc.js
.gemini/: settings.json
.github/workflows/: deploy-book.yml  on-push.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  installation.md  intro.md  links.md
book/src/configuration/: README.md  bar.md  block.md  command.md  concepts.md  cookbook.md  llm.md  variable.md
book/src/configuration/cookbook/: README.md  advanced.md  appearance.md  block.md  data.md  llm.md  mcp.md  media.md  tray.md
book/src/configuration/reference/: README.md  llm.md  mcp.md  mpris.md  tray.md
configuration/: bar.html  block.html  command.html  concepts.html  index.html  variable.html
configuration/cookbook/: advanced.html  appearance.html  custom-clock.py  data.html  index.html  llm.html  mcp.html  media.html  tray.html
configuration/reference/: index.html  llm.html  mcp.html  mpris.html  tray.html
data/: default_config.toml  mcp_instructions.md
src/: bar.rs  cli.rs  clock.rs  config.rs  dbusmenu.rs  desktop.rs  drawing.rs  engine.rs  ewmh.rs  ipc.rs  ipcserver.rs  keyboard.rs  llm.rs  logging.rs  main.rs  mcp.rs  mpris.rs  notify.rs  parse.rs  pidfile.rs  poke.rs  popup_visibility.rs  process.rs  protocol.rs  restart.rs  sni.rs  sni_item.rs  source.rs  state.rs  stats.rs  svg_dump.rs  thread.rs  timer.rs  wait.rs  wayland.rs  window.rs  wm.rs  wmready.rs  x11.rs  xrandr.rs  (+1 more)
src/mpris/: media_player2.rs  player.rs  playlists.rs  track_list.rs
