# Copyright 2023 Oatbar Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "oatbar"
version = "0.1.0"
edition = "2021"
description = "Powerful and customizable DE and WM status bar"
keywords = ["x11", "wm", "bar"]
categories = ["graphics", "visualization"]
license = "Apache-2.0"
documentation = "https://github.com/igor-petruk/oatbar"
repository = "https://github.com/igor-petruk/oatbar"
homepage = "https://oatbar.app"
default-run="oatbar"

[[bin]]
name="oatbar-keyboard"
path="src/keyboard.rs"

[[bin]]
name="oatbar-desktop"
path="src/desktop.rs"

[[bin]]
name="oatbar-stats"
path="src/stats.rs"

[[bin]]
name="oatbar-llm"
path="src/llm.rs"
required-features = ["llm"]

[[bin]]
name="oatctl"
path="src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["bmp", "ico", "image", "jpeg", "png", "webp", "svg", "raster", "llm", "llm-google", "llm-openai", "llm-anthropic", "llm-mistral", "llm-xai", "llm-ollama"]
image=[]
raster=["dep:image"]
bmp=["image", "raster", "image/bmp"]
ico=["image", "raster", "image/ico"]
jpeg=["image", "raster", "image/jpeg"]
png=["image", "raster", "image/png"]
webp=["image", "raster", "image/webp"]
svg=["image", "dep:resvg"]
profile = ["dep:pprof"]
llm = ["dep:llm", "dep:tokio"]
llm-google = ["llm", "llm/google"]
llm-openai = ["llm", "llm/openai"]
llm-anthropic = ["llm", "llm/anthropic"]
llm-mistral = ["llm", "llm/mistral"]
llm-xai = ["llm", "llm/xai"]
llm-ollama = ["llm", "llm/ollama"]

[dependencies]
pprof = { version = "0.15", features = ["flamegraph"], optional = true }
anyhow = "1"
bytesize = "2.0"
cairo-rs = { version = "0.21", features = ["xcb"], default-features=false }
derive_builder = "0.20"
dirs = "6.0"
pangocairo = "0.21"
pango = {version="0.21", features=["v1_52"]}
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_regex = "1.1.0"
serde_with = { version = "3", default-features = false, features = ["macros", "std"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
xcb = { version = "1.4", features = ["randr", "xkb", "xlib_xcb", "xinput"] }
itertools = "0.14"
thiserror = "1.0.40"
macro_rules_attribute = "0.2.0"
crossbeam-channel = "0.5.8"
clap = {version="4.4.8", features=["derive"]}
fork = "0.2"
llm = { version= "1.3", features=["default-tls"], default-features=false, optional=true }
tokio = { version = "1", features = ["full"], optional=true }
libc = "0.2.150"
systemstat = "0.2.3"
nix = { version = "0.30", features = ["net"] }
image = { version = "0.25.1", optional=true, default-features = false }
resvg = {version = "0.45", optional=true}
chrono = { version = "0.4.42", features = ["serde"] }
serde_ext_duration = "0.2.0"


